# Python-projects

./: README.md  requirements.txt
hw1/: ast.out  ast_builder.py  fibonacci.py
hw1/Hard/: graph_generator.py  pretty_ast_builder.py
hw1/Medium/: ast_builder.py  simple.py
hw1/artifacts/Easy/: run_test.sh  test.out
hw1/artifacts/Hard/: fibonacci_ast.out  simple_ast.out
hw1/artifacts/Medium/: fibonacci_ast.out  simple_ast.out
hw1/src/: ast_builder.py  ast_builder_tools.py  fibonacci.py  pretty_ast_builder.py
hw2/: Dockerfile
hw2/artefacts/easy/: table.tex
hw2/artefacts/medium/: PyPI-link.txt  table_and_image.tex
hw2/resources/: test1.in
hw2/src/: gen_latex_table.py  gen_latex_table_and_image.py  run_medium_task.sh
hw3/artefacts/hard/: D.txt  hash.txt
hw3/artefacts/medium/: kek.txt
hw3/src/: matrix_easy.py  matrix_hard.py  matrix_medium.py  test_matrix.py
hw4/artefacts/: easy.txt  medium.txt
hw4/src/: easy_processes.py  easy_sync.py  easy_threads.py  fibonacci.py  integrate.py  run_easy_task.sh
hw5/: README.md
hw5/artefacts/async/: time.txt
hw5/artefacts/sync/: time.txt
hw5/src/: download_flies.py  download_flies_async.py  download_flies_sync.py
packaging_ast_builder/: README.md  setup.cfg
packaging_ast_builder/src/ast_builder_package/: ast_builder.py  ast_builder_tools.py  fibonacci.py  pretty_ast_builder.py
