[metadata]
name = ast-builder-package-DenisovNikita
version = 0.0.8
author = Nikita Denisov
author_email = nvdenisov2002@gmail.com
description = An AST builder package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DenisovNikita/Python-projects
project_urls =
    Bug Tracker = https://github.com/DenisovNikita/Python-projects/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
